--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Update.exe filter=lfs diff=lfs merge=lfs -text
 msedge64x.exe filter=lfs diff=lfs merge=lfs -text
+update64x.exe filter=lfs diff=lfs merge=lfs -text
