--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,1 @@
-Update.exe filter=lfs diff=lfs merge=lfs -text
-msedge64x.exe filter=lfs diff=lfs merge=lfs -text
-update64x.exe filter=lfs diff=lfs merge=lfs -text
+ECHO is on.
